improve ignore files, making docker file for flask lighter, improving notes and readme with respect to website, decoupling the display in the lib, making chipiron creation parametrized, updating flask, updating requiremeents, test_ flask app

--- a/flaskapp/templates/about.html
+++ b/flaskapp/templates/about.html
@@ -3,4 +3,6 @@
 Chipiron code available on github  at https://github.com/victorgabillon/chipiron <br>
 
 Contact victorgabillon@gmail.com
+
+version: 28 june 2025
 {% endblock content %}
